fixed spacing on home page

--- a/css/rco-custom.css
+++ b/css/rco-custom.css
@@ -119,7 +119,10 @@
 
 
 }
-
+#next-concert{
+	margin-top: -24px;
+	margin-bottom: 36px;
+}
 .rco-header >img{
     float: right;
 }
